data/collection/fixes/descriptions/kotlin/KT-12891
```
fun test() {
    val x by lazy { 2 }
}
```

```
1.kt:2:9: error: this variable must either have a type annotation or be initialized
    val x by lazy { 2 }
        ^
```
